--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -64,6 +64,8 @@
         android:id="@+id/textViewShowCaseClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:textColor="@color/blue"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
