--- a/bubbleshowcase/src/main/res/values/colors.xml
+++ b/bubbleshowcase/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="transparent_grey">#77000000</color>
     <color name="blue_default">#3F51B5</color>
     <color name="white">#FFF</color>
+    <color name="blue">#FF507FBE</color>
 </resources>
