--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -62,17 +62,13 @@
         android:id="@+id/textViewShowCaseClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="14dp"
         android:fontFamily="@font/roboto_medium"
         android:gravity="center"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="14dp"
         android:textColor="@color/blue"
         android:textSize="14sp"
-        android:layout_marginBottom="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutTexts"
-        tools:text="Next" />
+        tools:text="NEXT" />
 </androidx.constraintlayout.widget.ConstraintLayout>
