--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -62,7 +62,10 @@
         android:id="@+id/textViewShowCaseClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="14dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="28dp"
         android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:textColor="@color/blue"
