--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -28,9 +28,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/textViewShowCaseClose"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewShowCase"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,24 +39,22 @@
             android:id="@+id/textViewShowCaseTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:breakStrategy="simple"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/roboto_medium"
             android:text="Title"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/textViewShowCaseText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:breakStrategy="simple"
             android:fontFamily="@font/roboto_regular"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:visibility="gone" />
+            android:visibility="visible"
+            tools:text="Lorem Ipsum" />
     </LinearLayout>
 
     <TextView
@@ -63,8 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
+        android:layout_marginTop="27dp"
         android:layout_marginEnd="14dp"
-        android:layout_marginTop="14dp"
         android:layout_marginBottom="28dp"
         android:fontFamily="@font/roboto_medium"
         android:gravity="center"
