--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_regular"
             android:textColor="@color/white"
+            android:lineSpacingExtra="5sp"
             android:textSize="14sp"
             android:visibility="visible"
             tools:text="Lorem Ipsum" />
